tests/baselines/reference/project/cantFindTheModule/node/cantFindTheModule.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decl.ts(1,26): error TS2792: Cannot find module './foo/bar.tx'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
decl.ts(2,26): error TS2792: Cannot find module 'baz'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
decl.ts(3,26): error TS2792: Cannot find module './baz'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decl.ts (3 errors) ====
    import modErr  = require("./foo/bar.tx");
                             ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './foo/bar.tx'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import modErr1 = require("baz");
                             ~~~~~
!!! error TS2792: Cannot find module 'baz'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import modErr2 = require("./baz");
                             ~~~~~~~
!!! error TS2792: Cannot find module './baz'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    
    //import modErr1 = require("\bar");
    
    //import mod  = require("./foo/bar");
    //import mod1 = require("../module paths/foo/bar");
    //import mod2 = require("foo/bar");
    
    